--- a/src/pages/UserProfile/UserProfile.module.scss
+++ b/src/pages/UserProfile/UserProfile.module.scss
@@ -1,12 +1,11 @@
 .card {
   background: white;
-  min-width: 100%;
   box-sizing: border-box;
   overflow-x: hidden;
   padding: 20px;
 
   .avatar {
-    height: 80px;
-    width: 80px;
+    width: 120px;
+    height: 120px;
   }
 }
